code improvements and adding data.sql file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,22 @@
 #
 # JDBC properties
 #
-spring.datasource.url=jdbc:postgresql://localhost:5432/cafe-manager
-spring.datasource.username=postgres
-spring.datasource.password=0000
-spring.datasource.driver-class-name=org.postgresql.Driver
+######################
+#spring.datasource.url=jdbc:postgresql://localhost:5432/cafe-manager
+#spring.datasource.username=postgres
+#spring.datasource.password=0000
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.database=postgresql
+######################
+spring.datasource.url=jdbc:h2:~/h2db;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database=h2
 #
 # Hibernate properties
 #
-spring.jpa.database=postgresql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers.skip.column.definitions=true
+spring.jpa.hibernate.ddl-auto=create-drop
